# gpu2dcopylib

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build_and_exec_notes.sh  build_gpuc3.sh
.github/workflows/: gpu2dcopylib_ci.yaml
benchmarks/: CMakeLists.txt  chunk_parallel.cpp  full_set.cpp  intra_device.cpp  manifest.cpp
cuda/: test  test.cu
lib/: CMakeLists.txt  copylib_backend.cpp  copylib_backend.hpp  copylib_backend_kernels.cpp  copylib_core.cpp  copylib_core.hpp  copylib_support.cpp  copylib_support.hpp  utils.cpp  utils.hpp
sycl/: CMakeLists.txt  copylib.cpp  copylib.hpp  copylib_backend.cpp  copylib_backend.hpp  copylib_core.cpp  copylib_core.hpp  copylib_support.cpp  copylib_support.hpp  micro_bench.cpp  transfer_bench.cpp  transfer_test.cpp  unit_tests.cpp  utils.cpp  utils.hpp
sycl/tests/: CMakeLists.txt  backend_tests.cpp  core_tests.cpp  support_tests.cpp  utils_tests.cpp
tests/: CMakeLists.txt  core_tests.cpp  support_tests.cpp  test_utils.hpp  utils_tests.cpp
utils/: CMakeLists.txt  info.cpp
